crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__transactions__empty_cp_window_desc.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: output
---
#0 no-item | wm.cursor=boundary(cp=2,tx=4) wm.cp=- | end=QUERY_END_REASON_CHECKPOINT_BOUND
