crates/sui-kv-rpc/src/v2/snapshots/sui_kv_rpc__v2__pin_tests__transactions__end_lt_start.snap
---
source: crates/sui-kv-rpc/src/v2/pin_tests.rs
expression: output
---
INIT ERROR code=InvalidArgument msg="end_checkpoint must be greater than or equal to start_checkpoint"
